src/acid/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-app-dev
  template:
    metadata:
      labels:
        app: front-app-dev
    spec:
      containers:
        - name: front-app
          image: front-app:dev
          ports:
            - containerPort: 80
