src/acid/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-app-service-dev
spec:
  type: NodePort
  selector:
    app: front-app-dev
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
