src/acid/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-app-ingress-dev
spec:
  rules:
    - host: front-app-dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-app-service-dev
                port:
                  number: 80
